[package]
name = "rusteroids"
version = "0.1.0"
authors = ["RichoDemus <git@richodemus.com>"]
edition = "2024"


[dependencies]
bevy = "0.17"
rand = "0.9"
log = "0.4.28"
#legion = "0.2.4"
#nalgebra = "0.23.0"
#rand = { version = "0.7.3", features = ["stdweb"] }
#quicksilver = { version = "0.4.0", default-features = true, features = ["stdweb"]}
#ncollide2d = "0.26.0"
#itertools = "0.9.0"
